feat(feedback): 增加 HR 反馈分类
